Change cz to cs

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -17,7 +17,7 @@
       <select class="browser-style" name="default_lang" id="defaultLang">
         <option value="en" selected="">English</option>
         <option value="bg">Български</option>
-        <option value="cz">Čeština (Český)</option>
+        <option value="cs">Čeština (Český)</option>
         <option value="da">Dansk</option>
         <option value="de">Deutsch</option>
         <option value="es">Español</option>
