Implement settings-based popup translation

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,6 +17,9 @@
         <div id="error">
             <p></p>
         </div>
+        <script src="../lib/defaults.js"></script>
+        <script src="../lib/options.js"></script>
+        <script src="../lib/deepl.js"></script>
         <script src="popup.js"></script>
     </body>
 
