--- a/src/options/options.html
+++ b/src/options/options.html
@@ -65,7 +65,7 @@
         <small style="display:block;">This extension needs to use a different connection depending on your account type.</small>
     </fieldset>
   </div>
-  <script src="../lib/settings.js"></script>
+  <script src="../lib/defaults.js"></script>
   <script src="../lib/options.js"></script>
 
   <script src="options.js"></script>
