--- a/src/options/options.html
+++ b/src/options/options.html
@@ -43,6 +43,7 @@
         <option value="sk">Slovenský (Slovak)</option>
         <option value="sl">Slovenski (Slovenian)</option>
         <option value="sv">Svenska</option>
+        <option value="tr">Türkçe</option>
         <option value="uk">Українська</option>
         <option value="zh">简体中文 (simplified Chinese)</option>
       </select>
