--- a/src/options/options.html
+++ b/src/options/options.html
@@ -30,11 +30,14 @@
         <option value="fr">Français</option>
         <option value="fi">Suomi</option>
         <option value="hu">Magyar nyelv</option>
+        <option value="id">Bahasa Indonesia</option>
         <option value="it">Italiano</option>
         <option value="ja">日本語 (Japanese)</option>
+        <option value="ko">한국어 (Korean)</option>
         <option value="lv">Latviešu valoda</option>
         <option value="lt">Lietuvių kalba</option>
         <option value="nl">Nederlands</option>
+        <option value="nb">Norsk bokmål</option>
         <option value="pl">Polski</option>
         <option value="pt-PT">Português</option>
         <option value="pt-BR">Português (Brasil)</option>
